# crucible

./: .gitignore  NOTES.html  NOTES.org  README.md  TODO.org  autogen.sh  configure.ac  notes.org
src/: Makefile.am  asm.c  build.rl  build.sh  debug.sh  grammar.c  input.cr  io.c  kwds.c  lexer.c  loc.c  main.c  mem.c  other.cr  parser.c  preproc.c  sem.c  smap.c  test.json  types.c  utils.c  visitor.c
src/include/: asm.h  config.h.in  flags.h  global.h  grammar.h  io.h  kwds.h  lexer.h  loc.h  mem.h  parser.h  preproc.h  sem.h  types.h  utils.h  visitor.h
src/other/: log.cr  other1.cr  other2.cr  test.cr
src/probe/: build.rl
src/sampledata/: input.cr  other.cr  program
src/std/: bytes.cr  c.cr  dev.cr  io.cr  math.cr  mem.cr  string.cr
src/t/: README.org  main.cr  run.sh  runner.rl  test-basic-addition-1.cr  test-basic-for-loop-1.cr  test-basic-for-loop-2.cr  test-basic-for-loop-3.cr  test-basic-i32-var-decls-1.cr  test-basic-mut-1.cr  test-basic-mut-2.cr  test-basic-while-loop-1.cr  test-basic-while-loop-2.cr  test-basic.cr  test-break-1.cr  test-exit-1.cr  test-exit-w-identifiers-1.cr  test-exit-w-identifiers-2.cr  test-exit-w-many-identifiers.cr  test-if-else-if-stmt-1.cr  test-if-else-stmt-1.cr  test-if-stmt-1.cr  test-imports-1.cr  test-imports-2.cr  test-nested-if-stmt-1.cr  test-nested-if-stmt-2.cr  test-nested-if-stmt-3.cr  test-proccall-1.cr  test-proccall-2.cr  test-proccall-3.cr  test-proccall-4.cr  test-proccall-5.cr  test-proccall-6.cr  test-simple-struct-1.cr  test-simple-struct-2.cr  test-simple-struct-3.cr  test-simple-struct-4.cr  (+7 more)
(+60 files in other folders)
